[package]
name = "schedule"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
scraper = "0.12.0"
google-sheets4 = "*"
tokio = "*"
dotenvy = "0.15"

# tokio = { version = "~1.2", features = [ "macros", "io-util", "rt", "rt-multi-thread", "fs", ] }